# wall_calculator

./: LICENSE  pyproject.toml
src/tegla_szamolo/: main.py  visualiser.py
