[project]
name = "tegla-szamolo"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = ["windows-curses (>=2.4.2,<3.0.0)"]

[tool.poetry]
packages = [{ include = "tegla_szamolo", from = "src" }]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
